x86_64sim/src/x86_64sim/parser/X86_64SimParser.java
/* Generated By:JavaCC: Do not edit this line. X86_64SimParser.java */
package x86_64sim.parser;

import x86_64sim.*;
import x86_64sim.instruction.*;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings("all")
public class X86_64SimParser implements X86_64SimParserConstants {

  final public Program Program() throws ParseException {
        Program p = new Program();
    label_1:
    while (true) {
      if (jj_2_1(5)) {
        ;
      } else {
        break label_1;
      }
      Statement(p);
    }
    jj_consume_token(0);
          {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public void Statement(Program p) throws ParseException {
        String name;
    if (jj_2_4(5)) {
      Directive(p);
    } else if (jj_2_5(5)) {
      if (jj_2_2(5)) {
        name = Label();
                           p.add(name);
      } else {
        ;
      }
      if (jj_2_3(5)) {
        Instruction(p);
      } else {
        ;
      }
      jj_consume_token(NL);

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Directive(Program p) throws ParseException {
  String value;
    if (jj_2_8(5)) {
      jj_consume_token(TEXT);
          p.doText();
    } else if (jj_2_9(5)) {
      jj_consume_token(DATA);
          p.doData();
    } else if (jj_2_10(5)) {
      jj_consume_token(QUAD);
      if (jj_2_6(5)) {
        value = Integer();
      } else if (jj_2_7(5)) {
        value = Identifier();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
          p.doQuad(value);
    } else if (jj_2_11(5)) {
      jj_consume_token(ALIGN);
      value = Integer();
          p.doAlign(value);
    } else if (jj_2_12(5)) {
      jj_consume_token(GLOBL);
      jj_consume_token(IDENTIFIER);
    } else if (jj_2_13(5)) {
      jj_consume_token(IDENT);
      jj_consume_token(STRING);
    } else if (jj_2_14(5)) {
      jj_consume_token(SECTION);
    } else if (jj_2_15(5)) {
      jj_consume_token(TYPE);
    } else if (jj_2_16(5)) {
      jj_consume_token(SIZE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String Label() throws ParseException {
        String name;
    name = Identifier();
    jj_consume_token(66);
          {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public void Instruction(Program p) throws ParseException {
        String offset = "0", source = null, index = null, target = null, scale = "1";
    if (jj_2_36(5)) {
      jj_consume_token(ADD);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new AddI2R(source, target));
    } else if (jj_2_37(5)) {
      jj_consume_token(ADD);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new AddR2R(source, target));
    } else if (jj_2_38(5)) {
      jj_consume_token(CALL);
      target = Identifier();
          p.add(new Call(target));
    } else if (jj_2_39(5)) {
      jj_consume_token(CALL);
      jj_consume_token(STAR);
      target = Register();
          p.add(new Call("*", target));
    } else if (jj_2_40(5)) {
      jj_consume_token(CMOVL);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("l", source, target));
    } else if (jj_2_41(5)) {
      jj_consume_token(CMOVE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("e", source, target));
    } else if (jj_2_42(5)) {
      jj_consume_token(CMOVG);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("g", source, target));
    } else if (jj_2_43(5)) {
      jj_consume_token(CMOVLE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("le", source, target));
    } else if (jj_2_44(5)) {
      jj_consume_token(CMOVNE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("ne", source, target));
    } else if (jj_2_45(5)) {
      jj_consume_token(CMOVGE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("ge", source, target));
    } else if (jj_2_46(5)) {
      jj_consume_token(CMOVB);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("b", source, target));
    } else if (jj_2_47(5)) {
      jj_consume_token(CMOVA);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("a", source, target));
    } else if (jj_2_48(5)) {
      jj_consume_token(CMOVBE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("be", source, target));
    } else if (jj_2_49(5)) {
      jj_consume_token(CMOVAE);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CMovR2R("ae", source, target));
    } else if (jj_2_50(5)) {
      jj_consume_token(CMP);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CmpI2R(source, target));
    } else if (jj_2_51(5)) {
      jj_consume_token(CMP);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CmpR2R(source, target));
    } else if (jj_2_52(5)) {
      jj_consume_token(CMP);
      if (jj_2_17(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      source = Register();
      jj_consume_token(RPAREN);
      jj_consume_token(COMMA);
      target = Register();
          p.add(new CmpM2R(offset, source, target));
    } else if (jj_2_53(5)) {
      jj_consume_token(CMP);
      source = Register();
      jj_consume_token(COMMA);
      if (jj_2_18(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      target = Register();
      jj_consume_token(RPAREN);
          p.add(new CmpR2M(source, offset, target));
    } else if (jj_2_54(5)) {
      jj_consume_token(CMP);
      source = IntLit();
      jj_consume_token(COMMA);
      if (jj_2_19(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      target = Register();
      jj_consume_token(RPAREN);
          p.add(new CmpI2M(source, offset, target));
    } else if (jj_2_55(5)) {
      jj_consume_token(DEC);
      target = Register();
          p.add(new Dec(target));
    } else if (jj_2_56(5)) {
      jj_consume_token(INC);
      target = Register();
          p.add(new Inc(target));
    } else if (jj_2_57(5)) {
      jj_consume_token(JL);
      target = Identifier();
          p.add(new CJmp("l", target));
    } else if (jj_2_58(5)) {
      jj_consume_token(JE);
      target = Identifier();
          p.add(new CJmp("e", target));
    } else if (jj_2_59(5)) {
      jj_consume_token(JG);
      target = Identifier();
          p.add(new CJmp("g", target));
    } else if (jj_2_60(5)) {
      jj_consume_token(JLE);
      target = Identifier();
          p.add(new CJmp("le", target));
    } else if (jj_2_61(5)) {
      jj_consume_token(JNE);
      target = Identifier();
          p.add(new CJmp("ne", target));
    } else if (jj_2_62(5)) {
      jj_consume_token(JGE);
      target = Identifier();
          p.add(new CJmp("ge", target));
    } else if (jj_2_63(5)) {
      jj_consume_token(JB);
      target = Identifier();
          p.add(new CJmp("b", target));
    } else if (jj_2_64(5)) {
      jj_consume_token(JA);
      target = Identifier();
          p.add(new CJmp("a", target));
    } else if (jj_2_65(5)) {
      jj_consume_token(JBE);
      target = Identifier();
          p.add(new CJmp("be", target));
    } else if (jj_2_66(5)) {
      jj_consume_token(JAE);
      target = Identifier();
          p.add(new CJmp("ae", target));
    } else if (jj_2_67(5)) {
      jj_consume_token(JMP);
      target = Identifier();
          p.add(new Jmp(target));
    } else if (jj_2_68(5)) {
      jj_consume_token(LEAVE);
          p.add(new Leave());
    } else if (jj_2_69(5)) {
      jj_consume_token(MOV);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new MoveI2R(source, target));
    } else if (jj_2_70(5)) {
      jj_consume_token(MOV);
      source = IdLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new MoveI2R(source, target));
    } else if (jj_2_71(5)) {
      jj_consume_token(MOV);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new MoveR2R(source, target));
    } else if (jj_2_72(5)) {
      jj_consume_token(MOV);
      if (jj_2_20(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      source = Register();
      if (jj_2_22(5)) {
        jj_consume_token(COMMA);
        index = Register();
        if (jj_2_21(5)) {
          jj_consume_token(COMMA);
          scale = Integer();
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(COMMA);
      target = Register();
          if (index == null) p.add(new MoveM2R(offset, source, target)); else p.add(new MoveIM2R(offset, source, target, index, scale));
    } else if (jj_2_73(5)) {
      jj_consume_token(MOV);
      source = Register();
      jj_consume_token(COMMA);
      if (jj_2_23(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      target = Register();
      if (jj_2_25(5)) {
        jj_consume_token(COMMA);
        index = Register();
        if (jj_2_24(5)) {
          jj_consume_token(COMMA);
          scale = Integer();
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(RPAREN);
          if (index == null) p.add(new MoveR2M(offset, source, target)); else p.add(new MoveR2IM(offset, source, target, index, scale));
    } else if (jj_2_74(5)) {
      jj_consume_token(MOV);
      if (jj_2_26(5)) {
        source = IntLit();
      } else if (jj_2_27(5)) {
        source = IdLit();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(COMMA);
      if (jj_2_28(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      target = Register();
      if (jj_2_30(5)) {
        jj_consume_token(COMMA);
        index = Register();
        if (jj_2_29(5)) {
          jj_consume_token(COMMA);
          scale = Integer();
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(RPAREN);
          if (index == null) p.add(new MoveI2M(offset, source, target)); else p.add(new MoveI2IM(offset, source, target, index, scale));
    } else if (jj_2_75(5)) {
      jj_consume_token(LEA);
      if (jj_2_31(5)) {
        offset = Integer();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      source = Register();
      if (jj_2_33(5)) {
        jj_consume_token(COMMA);
        index = Register();
        if (jj_2_32(5)) {
          jj_consume_token(COMMA);
          scale = Integer();
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(COMMA);
      target = Register();
          if (index == null) p.add(new Lea(offset, source, target)); else p.add(new Lea(offset, source, target, index, scale));
    } else if (jj_2_76(5)) {
      jj_consume_token(LEA);
      if (jj_2_34(5)) {
        offset = Identifier();
      } else {
        ;
      }
      jj_consume_token(LPAREN);
      source = Rip();
      jj_consume_token(RPAREN);
      jj_consume_token(COMMA);
      target = Register();
          p.add(new Lea(offset, target));
    } else if (jj_2_77(5)) {
      jj_consume_token(MUL);
      scale = IntLit();
      jj_consume_token(COMMA);
      source = Register();
      if (jj_2_35(5)) {
        jj_consume_token(COMMA);
        target = Register();
      } else {
        ;
      }
          if (target == null) p.add(new MulI2R(scale, source)); else p.add(new MulIR2R(scale, source, target));
    } else if (jj_2_78(5)) {
      jj_consume_token(MUL);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new MulR2R(source, target));
    } else if (jj_2_79(5)) {
      jj_consume_token(DIV);
      source = Register();
          p.add(new DivR(source));
    } else if (jj_2_80(5)) {
      jj_consume_token(CQTO);
          p.add(new CQTO());
    } else if (jj_2_81(5)) {
      jj_consume_token(PUSH);
      target = Register();
          p.add(new Push(target));
    } else if (jj_2_82(5)) {
      jj_consume_token(RET);
          p.add(new Ret());
    } else if (jj_2_83(5)) {
      jj_consume_token(SAL);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new SalI2R(source, target));
    } else if (jj_2_84(5)) {
      jj_consume_token(SAR);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new SarI2R(source, target));
    } else if (jj_2_85(5)) {
      jj_consume_token(SUB);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new SubI2R(source, target));
    } else if (jj_2_86(5)) {
      jj_consume_token(SUB);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new SubR2R(source, target));
    } else if (jj_2_87(5)) {
      jj_consume_token(XOR);
      source = IntLit();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new XorI2R(source, target));
    } else if (jj_2_88(5)) {
      jj_consume_token(XOR);
      source = Register();
      jj_consume_token(COMMA);
      target = Register();
          p.add(new XorR2R(source, target));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String IntLit() throws ParseException {
        String i;
    jj_consume_token(DOLLAR);
    i = Integer();
          {if (true) return i;}
    throw new Error("Missing return statement in function");
  }

  final public String Integer() throws ParseException {
        Token i;
    i = jj_consume_token(INTEGER_LITERAL);
          {if (true) return i.image;}
    throw new Error("Missing return statement in function");
  }

  final public String Identifier() throws ParseException {
        Token i;
    i = jj_consume_token(IDENTIFIER);
          {if (true) return i.image;}
    throw new Error("Missing return statement in function");
  }

  final public String IdLit() throws ParseException {
        Token i;
    jj_consume_token(DOLLAR);
    i = jj_consume_token(IDENTIFIER);
          {if (true) return i.image;}
    throw new Error("Missing return statement in function");
  }

  final public String Register() throws ParseException {
        Token i;
    i = jj_consume_token(REGISTER);
          {if (true) return i.image;}
    throw new Error("Missing return statement in function");
  }

  final public String Rip() throws ParseException {
        Token i;
    i = jj_consume_token(RIP);
          {if (true) return i.image;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }
